--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ remote_theme: zozobalogh0817/zocs@next
 url: 'https://zozobalogh0817.github.io/merger_documentation/'
 path: 'https://zozobalogh0817.github.io/merger_documentation/usage'
 settings: {
-  home: "/",
+  home: "/usage",
   redirectTimeOut: 3,
   private: true,
   hasHeader: true,
